# pricewatch

./: .clang  .gitignore  .vimrc  AltexMarket.cpp  AltexMarket.hpp  CMakeLists.txt  EMagMarket.cpp  EMagMarket.hpp  EMagWebPage.cpp  EMagWebPage.hpp  MarketProduct.cpp  MarketProduct.hpp  MarketWebPage.cpp  MarketWebPage.hpp  ProductCategory.cpp  ProductCategory.hpp  README.md  WebMarket.cpp  WebMarket.hpp  main.cpp  main.moc_parameters  pricewatch.sql  sample_requests.sql
